syntax = "proto3";
package vis;

option java_package = "ms.domwillia.jvmemory.preprocessor.protobuf";
option java_outer_classname = "Event";

enum EventType {
    MESSAGE_TYPE_PADDING = 0; // grumble grumble

    ADD_HEAP_OBJECT = 1;
    DEL_HEAP_OBJECT = 2;

    SET_INTRA_HEAP_LINK = 3;
    SET_LOCAL_VAR_LINK = 4;

    SHOW_LOCAL_VAR_ACCESS = 5;
    SHOW_HEAP_OBJECT_ACCESS = 6;

    PUSH_METHOD_FRAME = 7;
    POP_METHOD_FRAME = 8;

    SET_STATIC = 9;
}

message EventVariant {
    EventType type = 1;
    bool continuous = 9;
    oneof payload {
        AddHeapObject add_heap_object = 2;
        DelHeapObject del_heap_object = 3;

        SetIntraHeapLink set_intra_heap_link = 4;
        SetLocalVarLink set_local_var_link = 5;

        ShowLocalVarAccess show_local_var_access = 6;
        ShowHeapObjectAccess show_heap_object_access = 7;

        PushMethodFrame push_method_frame = 8;
        PopMethodFrame pop_method_frame = 10;

        SetStatic set_static = 11;
    }
}

message PushMethodFrame {
    string owning_class = 1;
    string name = 2;
    string signature = 3;
    int64 obj_id = 4;
}

message PopMethodFrame {}

message AddHeapObject {
    int64 id = 1;
    string class = 2;
    int32 array_size = 3;
}

message DelHeapObject {
    int64 id = 1;
}

message SetIntraHeapLink {
    int64 src_id = 1;
    int64 dst_id = 2;
    string field_name = 3;
}

message SetLocalVarLink {
    int32 var_index = 1;
    int64 dst_id = 2;
}

message ShowLocalVarAccess {
    int32 var_index = 1;
    bool read = 2;
}

message ShowHeapObjectAccess {
    int64 obj_id = 1;
    string field_name = 2;
    bool read = 3;
}

message SetStatic {
    int64 old_obj_id = 1;
    int64 new_obj_id = 2;
    string class = 3;
    string field_name = 4;
}
